--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,5 +3,57 @@
 /*
 Paleta de cores
 Verde: #49a09d
-Lilas: #5f2c82
+Laranja: #b36500 
 */
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+
+    background-image: linear-gradient(to bottom, #b36500, rgb(49, 46, 66));
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;    
+}
+
+#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+   
+    background-color: white;
+    border-radius: 20px;
+    height: 500px;
+    width: 300px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    
+}
+#imagem{
+    background: #b36500 url(../imagens/imgfundo.jpg) ;
+    background-size: cover;
+    height: 300px;
+}
+
+#formulario{
+    padding: 10px;
+}
+#formulario h1{
+    text-align: center;
+    margin-bottom: 10px;
+
+}
+#formulario p{
+    font-size: 0.8em;
+}
