--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,7 +15,7 @@ Laranja: #b36500
 
 body, html{
 
-    background-image: linear-gradient(to bottom, #b36500, rgb(49, 46, 66));
+    background-image: linear-gradient(to bottom, #b36500, #312e42);
     height: 100vh;
     width: 100vw;
 }
@@ -33,7 +33,7 @@ main{
     transform: translate(-50%, -50%);
     overflow: hidden;
    
-    background-color: white;
+    background-image:linear-gradient(to top, grey, white) ;
     border-radius: 20px;
     height: 500px;
     width: 300px;
@@ -43,7 +43,7 @@ main{
 #imagem{
     background: #b36500 url(../imagens/imgfundo.jpg) ;
     background-size: cover;
-    height: 300px;
+    height: 200px;
 }
 
 #formulario{
@@ -56,4 +56,73 @@ main{
 }
 #formulario p{
     font-size: 0.8em;
+}
+
+form input[type=submit]{
+    display: block;
+    font-size: 1em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 100%;
+    height: 40px;
+    background-color:#333333 ;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    
+    box-shadow: 0px 2px 2px rgba(56, 56, 56, 0.562);
+}
+label{
+    display: none;
+}
+
+form input[type=submit]:hover{
+    background-color: black;
+}
+
+.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 100%;
+    height: 40px;
+    background-color:#8f2222 ;
+    color: white;
+    border-radius: 5px;
+    text-decoration: none;
+    
+}
+.botao:hover{
+    background-color: #d80000;
+}
+form > a.botao > span{
+    padding-top: 10px;
+    font-size: 0.8em;
+}
+
+.campo{
+    background-color: #b36500;
+    height: 40px;
+    border-radius: 5px;
+    margin:5px 0px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+div.campo span{
+   font-size: 2em;
+   width: 40px;
+   padding: 5px;
+   color: white;
+}
+input{
+    background-color: rgba(0, 0, 0, 0.411);
+    color: white;
+    font-size: 1em;
+    width: calc(100%-20px);
+    height: 100%;
+    transform: translateY(-10px);
+    border: 0px;
+    border-radius: 5px;
+    padding: 4px;
+   
 }
